[package]
name = "meme-rush-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
web3 = { version = "0.19" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2"
base64 = "0.13"
sha2 = "0.10"
